cmake_minimum_required(VERSION 4.0)
project(cpp11)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp11 main.cpp
        main.cpp
        bind绑定器.cpp
        muduo.cpp
        muduo_youhua.cpp
        lambda表达式.cpp
        bind1first.cpp
        bind1first.cpp
        多线程.cpp
        多线程同步通信.cpp
        锁测试.cpp
        cas.cpp
        dep.h
        单例模式.cpp
        测试拷贝.cpp
        懒汉式单例模式.cpp
        懒汉单例模式第二种.cpp
        test_singleton.cpp
        简单工厂.cpp
        工厂方法.cpp
        拷贝测试.cpp
        抽象工厂.cpp
        代理模式.cpp
        装饰器模式.cpp
        适配器模式.cpp
        观察者模式.cpp
        路径选择.cpp
        路径选择c.c
        路径选择cai.c
        路径选择ai广度有限.c
        BigInt.cpp
        BigInt.cpp
        bf.c
        测试.c
        main.c
        sum.c)
